--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "sass": "^1.84.0",
-    "vite": "^6.0.11",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.0"
   }
 }
